@@ -1,5 +1,4 @@
 
-* Add check that there is a c'tor when instantiating an object
 * Add check for except: pass
 * Add check that when calling base class __init__(), self is first arg
 * Add check for multiple functions/methods/classes w/same name
